# PdfDing

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .woodpecker.yaml  CHANGELOG.md  CODEOWNERS  Dockerfile  README.md  bootstrap.sh  docker-compose.yaml  package-lock.json  package.json  pyproject.toml  supervisord.conf  tailwind.config.js
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: chart_release.yaml  manual_publish.yaml  publish.yaml  release.yaml  test.yaml  tests.yaml
.github/workflows/scripts/: requirements.txt  update_changelog_after_release.py  update_chart_yaml_after_release.py  update_files_after_release.py
.woodpecker/: e2e.Dockerfile  e2e.Dockerfile.dockerignore  publish.yaml  test.yaml
compose/: postgres.docker-compose.yaml  sqlite.docker-compose.yaml
deploy/: postgres.docker-compose.yaml  sqlite.docker-compose.yaml
docs/: configuration.md  development.md  guides.md  screenshots.md
helm-charts/pdfding/: Chart.yaml  README.md  values.demo.yaml  values.yaml
helm-charts/pdfding/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
pdfding/: manage.py
pdfding/admin/: service.py  urls.py  views.py
pdfding/admin/templates/: information.html  user_overview.html
pdfding/admin/tests/: test_service.py  test_views.py
pdfding/api/: apps.py  conftest.py  models.py  serializers.py  views.py
pdfding/api/migrations/: 0001_initial.py  0002_wait_for_knox.py
pdfding/api/tests/: test_models.py  test_views.py
pdfding/api_auth/: admin.py  apps.py  conftest.py  models.py  serializers.py  views.py
pdfding/api_auth/migrations/: 0001_initial.py  0002_wait_for_knox.py
pdfding/api_auth/tests/: test_models.py  test_views.py
pdfding/backup/: service.py  tasks.py
pdfding/backup/tests/: __init__.py  test_management.py  test_service.py  test_tasks.py
pdfding/base/: base_views.py  service.py  task_helpers.py
pdfding/base/tests/: base_view_definitions.py  test_base_views.py  test_service.py  test_task_helpers.py
pdfding/core/: adapters.py  asgi.py  base_settings.py  base_views.py  context_processors.py  urls.py  views.py  wsgi.py
pdfding/core/settings/: __init__.py  base.py  dev.py  prod.py
pdfding/core/tests/: test_views.py
pdfding/db/: .gitignore  .gitkeep
pdfding/e2e/: helpers.py  test_admin_e2e.py  test_pdf_annotations_e2e.py  test_pdf_details_e2e.py  test_pdf_e2e.py  test_pdf_overview_e2e.py  test_pdf_overview_sidebar_e2e.py  test_share_e2e.py  test_user_e2e.py  test_users_e2e.py
pdfding/home/: views.py
pdfding/pdf/: admin.py  apps.py  forms.py  models.py  service.py  signals.py  tasks.py  urls.py  views.py
pdfding/pdf/migrations/: 0001_add_pdf_and_tag.py  0002_add_pdf_views.py  0002_change_pdf_and_tag_model_id_to_uuid.py  0003_add_current_page_to_pdf.py  0003_add_pdf_sharing.py  0004_add_pdf_sharing_options.py  0005_add_last_viewed_date.py  0006_increase_pdf_model_name_lenghts_to_150.py  0007_add_number_of_pdf_pages.py  0008_tmp_remove_number_of_pages.py  0009_readd_number_of_pages_with_new_default.py  0010_add_notes.py  0011_add_starred_archived.py  0012_add_pdf_thumbnails.py  0013_add_pdf_previews.py  0014_add_pdf_revision.py  0015_add_comments_highlights.py  0016_rename_pdfs_and_add_file_directory.py  0016_update_pdf_file_names.py  0017_increase_pdf_file_field_max_lenght.py  0018_remove_wrong_null_true.py  0019_add_collections_workspaces.py  0020_fill_collections_workspaces.py  0021_adjust_workspace_role_names.py
pdfding/pdf/models/: collection_models.py  pdf_models.py  shared_pdf_models.py  workspace_models.py
pdfding/pdf/services/: workspace_services.py
pdfding/templates/: 404.html  about.html  base.html  support.html
pdfding/users/: adapters.py  forms.py  models.py  service.py  signals.py  urls.py  views.py
(+156 files in other folders)
