[tool.poetry]
name = "pdfding"
version = "0.1.1"
description = ""
authors = ["mrmn"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "==5.0.7"
django-allauth = {extras = ["socialaccount"], version = "==0.63.6"}
django-cleanup = "==8.1.0"
django-htmx = "==1.18.0"
gunicorn = "==22.0.0"
psycopg2-binary = "==2.9.9"
python-magic = "==0.4.27"
whitenoise = {extras = ["brotli"], version = "==6.7.0 "}

[tool.poetry.group.dev.dependencies]
black = "==24.4.2"
flake8 = "==7.1.0"
pytest = "==8.2.2"
pytest-cov = "==5.0.0"
pytest-django = "==4.8.0"

[tool.black]
line-length = 120
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "pdfding.core.settings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
