[tool.poetry]
name = "pdfding"
version = "0.1.1"
description = ""
authors = ["mrmn"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11 <4.0"
django = "==5.1.4"
django-allauth = {extras = ["socialaccount"], version = "==65.3.0"}
django-cleanup = "==9.0.0"
django-htmx = "==1.21.0"
gunicorn = "==23.0.0"
huey = "==2.5.2"
Markdown = "==3.7"
minio = "==7.2.13"
nh3 = "==0.2.20"
psycopg2-binary = "==2.9.10"
python-magic = "==0.4.27"
qrcode= {extras = ["pil"], version = "==8.0 "}
supervisor = "==4.2.5"
whitenoise = {extras = ["brotli"], version = "==6.8.2 "}
pypdfium2 = "==4.30.1"

[tool.poetry.group.dev.dependencies]
bandit = "==1.7.10"
black = "==24.8.0"
flake8 = "==7.1.1"
pytest = "==8.3.3"
pytest-cov = "==5.0.0"
pytest-django = "==4.9.0"

[tool.poetry.group.e2e.dependencies]
pytest-playwright = "==0.5.2"

[tool.black]
line-length = 120
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "pdfding.core.settings"

[tool.bandit]
exclude_dirs = ["tests", "path/to/file"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
atomic = true
profile = "black"
line_length = 120
skip_gitignore = true
