[tool.poetry]
name = "pdfding"
version = "0.1.1"
description = ""
authors = ["mrmn"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11 <4.0"
django = "==5.2.6"
django-allauth = {extras = ["socialaccount"], version = "==65.11.2"}
django-cleanup = "==9.0.0"
django-htmx = "==1.25.0"
gunicorn = "==23.0.0"
huey = "==2.5.3"
Markdown = "==3.9"
minio = "==7.2.16"
nh3 = "==0.3.0"
psycopg2-binary = "==2.9.10"
pypdfium2 = "==4.30.0"
pypdf = "==6.0.0"
python-magic = "==0.4.27"
qrcode= {extras = ["pil"], version = "==8.2 "}
RapidFuzz = "==3.14.1"
ruamel-yaml = "==0.18.15"
supervisor = "==4.3.0"
whitenoise = {extras = ["brotli"], version = "==6.11.0 "}

[tool.poetry.group.dev.dependencies]
bandit = "==1.8.6"
black = "==25.9.0"
flake8 = "==7.3.0"
pytest = "==8.4.2"
pytest-cov = "==7.0.0"
pytest-django = "==4.11.1"

[tool.poetry.group.e2e.dependencies]
pytest-playwright = "==0.7.1"

[tool.black]
line-length = 120
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "pdfding.core.settings"

[tool.bandit]
exclude_dirs = ["tests", "path/to/file"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
atomic = true
profile = "black"
line_length = 120
skip_gitignore = true
